--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    /*"strict": true,*/
+    "strict": true,
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
     "sourceMap": true,
